--- a/components/header/index.html
+++ b/components/header/index.html
@@ -17,7 +17,7 @@
         </button>
     </div>
     <div class="header-access">
-        <button class="login">Iniciar Sesion</button>
+        <button class="login" id="login-btn">Iniciar Sesion</button>
         <button class="sign-in">Registrarse</button>
     </div>
 </header>
